# cmake-template

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakeOptions.cmake  LICENSE  Makefile  README.md  conanfile.py  sample_exe.1.in  sample_lib.1.in  sample_lib.pc.in
.github/workflows/: cmake-multi-platform.yml
cmake/: CPackConfigurations.cmake  CheckSanitizerSourceCompile.cmake  ConfigureOptions.cmake  FetchGTest.cmake  GlobalConfig.cmake  InstallConfigurations.cmake  LinkSanitizers.cmake  ProjectConfig.cmake  SampleLibConfig.cmake.in  sample_lib-config-version.cmake
src/: CMakeLists.txt  sample_lib.cxx  sample_lib.hxx  sample_lib_exe.cxx  sample_lib_internal.cxx
src/internal/: sample_lib_.hxx  sample_lib_exe_.hxx.in
test/: CMakeLists.txt  unit_test.cxx
